fixed links to home page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advantage-you",
-  "homepage": "https://josephd069.github.io/advantage-you/",
+  "homepage": "https://josephd069.github.io/Advantage-YOU/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
